<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGrocery">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/tv_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_perishable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:text="@string/tv_perishable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_price" />

    <RadioGroup
        android:id="@+id/rg_perishable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_perishable">

        <RadioButton
            android:id="@+id/rb_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rg_yes" />

        <RadioButton
            android:id="@+id/rb_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rg_no" />
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:contentDescription="Add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_perishable"
        app:srcCompat="@android:drawable/ic_menu_send" />
</androidx.constraintlayout.widget.ConstraintLayout>